--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abc.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span> 9817205077</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Himachal</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech (CSE)</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech</span></li>
+                 
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>rjamwal656.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>For Job:</strong> <span>Available</span></li>
                 </ul>
